k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spinal-tap
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "64m"
    nginx.ingress.kubernetes.io/proxy-request-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
  labels:
    app: spinal-tap
spec:
  rules:
  - host: spinal-tap.slac.stanford.edu
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: spinal-tap
            port:
              number: 8888
